@@ -2,6 +2,8 @@
 
     user visible changes, client:
     * Added check after mkdir and cd on Windows
+    * Check checksum for already synced files, to overcome possible file corruption.
+    * Added message for already synced files tah need sync or unsynced file that do not need sync.
 
     programmer visible changes:
     * Fixed missing import in instlAdmin.py
